infra/flux/receiver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeops-receiver
  namespace: flux-system
spec:
  type: LoadBalancer
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9292
